--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teste</title>
   <script src="script.js"></script>
+  <link rel="stylesheet" href="style.scss">
 </head>
 <body>
-  <div>Testando</div>
+  <div classname="container">
+    <h1>API ViaCEP</h1>
+    <p>Informe o CEP para que possamos processar de forma automática as demais informações</p>
+    <label>CEP: <input type="text" id="txtCep"></label>
+    <label>Cidade: <input type="text" id="txtCidade"></label>
+    <label>Estado: <input type="text" id="txtEstado"></label>
+    <label>Bairro: <input type="text" id="txtBairro"></label>
+    <label>Rua: <input type="text" id="txtRua"></label>
+    <label>Complemento: <input type="text" id="txtComplemento"></label>
+  </div>
 </body>
 </html>
